@@ -302,6 +302,7 @@ EXTRA_DIST = \
 	mips/ultrix4/md.h \
 	parisc/common.h \
 	parisc/hpux/config.frag \
+	parisc/hpux/md.c \
 	parisc/hpux/md.h \
 	parisc/linux/config.frag \
 	parisc/linux/md.c \
