@@ -1,0 +1,10 @@
+/*
+ * parisc/hpux/md.c
+ * HP-UX PA-RISC specific functions.
+ *
+ * Copyright (c) 2007
+ *      Kaffe.org contributors, see ChangeLogs for details.
+ *
+ * See the file "license.terms" for information on usage and redistribution
+ * of this file.
+ */     
